--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@ ga('send', 'pageview');
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
+                <a class="nav-link" href="{{ site.baseurl }}/about">About me</a>
                 </li>
 
                 {% include search-lunr.html %}
@@ -159,9 +159,9 @@ ga('send', 'pageview');
             <div class="col-md-6 col-sm-6 text-center text-lg-left">
                 {{ site.time | date: "%Y" }} {{ site.name }}. Legal rights of car photos belong to their owners.
             </div>
-            <div class="col-md-6 col-sm-6 text-center text-lg-right">    
+            <!-- <div class="col-md-6 col-sm-6 text-center text-lg-right">    
                 <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">Mediumish Jekyll Theme</a> by WowThemes.net
-            </div>
+            </div> -->
         </div>
     </div>
 </footer>
