--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,6 +73,14 @@ ga('send', 'pageview');
                 </li>
 
                 <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/tags">Car tags</a>
+                </li>
+
+                <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/welcome">Welcome</a>
+                </li>
+
+                <li class="nav-item">
                 <a class="nav-link" href="{{ site.baseurl }}/about">About me</a>
                 </li>
 
