--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -167,9 +167,9 @@ ga('send', 'pageview');
             <div class="col-md-6 col-sm-6 text-center text-lg-left">
                 {{ site.time | date: "%Y" }} {{ site.name }}. Legal rights of car photos belong to their owners.
             </div>
-            <!-- <div class="col-md-6 col-sm-6 text-center text-lg-right">    
-                <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">Mediumish Jekyll Theme</a> by WowThemes.net
-            </div> -->
+            <div class="col-md-6 col-sm-6 text-center text-lg-right">    
+                <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">Mediumish Jekyll Theme</a>
+            </div>
         </div>
     </div>
 </footer>
