--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -73,6 +73,10 @@ ga('send', 'pageview');
                 </li>
 
                 <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/categories#Iconic">Iconic cars</a>
+                </li>
+
+                <li class="nav-item">
                 <a class="nav-link" href="{{ site.baseurl }}/tags">Car tags</a>
                 </li>
 
