--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -169,7 +169,7 @@ ga('send', 'pageview');
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-6 text-center text-lg-left">
-                {{ site.time | date: "%Y" }} {{ site.name }} by {{site.authors.domas.name}}. Legal rights of car photos belong to their owners.
+                {{ site.name }} {{ site.time | date: "%Y" }} by {{site.authors.domas.name}}. All rights reserved.
             </div>
             <div class="col-md-6 col-sm-6 text-center text-lg-right">    
                 <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">Mediumish Jekyll Theme</a>
