--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -350,8 +350,13 @@ blockquote {
 
 .featured-image {
     display: block;
-    margin-bottom: 1.5rem;
+    margin-bottom: 5px;
     border-radius: 20px
+}
+
+a.photo-credit {
+    font-size: small;
+    color: grey;
 }
 
 .share {
