--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -56,7 +56,9 @@ post_class: post-template
             <img class="featured-image img-fluid lazyimg" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAADklEQVR42mNkAANGCAUAACMAA2w/AMgAAAAASUVORK5CYII=" data-src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ site.baseurl }}/{{ page.image }}{% endif %}" alt="{{ page.title }}">
             {% else %}
             <img class="featured-image img-fluid" src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ site.baseurl }}/{{ page.image }}{% endif %}" alt="{{ page.title }}">
-            <a target="_blank" class="photo-credit">Photo A: The concept. Source: {{page.featured-photo-source}}</a><br><br>
+            <div class="photo-credit">
+                <a>Photo A: The concept. Source: {{page.featured-photo-source}}</a>
+            </div>
             {% endif %}
 
             {% endif %}
