--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -358,8 +358,11 @@ blockquote {
     margin-bottom: 20px;
 }
 
-.photo-credit a{
+.photo-credit p{
     font-size: 12.5px;
+    font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    line-height: 120%;
+    color: grey;
 }
 
 .share {
