Made navbar an include for better implementation

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -62,31 +62,7 @@ ga('send', 'pageview');
 
         <!-- Begin Menu -->
 
-            <ul class="navbar-nav ml-auto">
-
-                <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/categories">Car categories</a>
-                </li>
-
-                <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/categories#Iconic">Iconic cars</a>
-                </li>
-
-                <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/tags">Car tags</a>
-                </li>
-
-                <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/welcome">Welcome</a>
-                </li>
-
-                <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/about">About me</a>
-                </li>
-
-                {% include search-lunr.html %}
-
-            </ul>
+                {% include navbar.html %}
 
         <!-- End Menu -->
 
