Made content not show up in a search result Fixed navbar animations

--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -23,7 +23,8 @@ a:hover {
 
 a.nav-link {
     padding: 0%;
-    padding-top: 0.5rem;
+    padding-top: 0.44rem;
+    padding-bottom: 0.34rem;
 }
 
 a.nav-link:hover {
