--- a/src/_includes/navbar.html
+++ b/src/_includes/navbar.html
@@ -1,5 +1,18 @@
 <ul class="navbar-nav ml-auto">
 
+    <style>
+        a.nav-link {
+            padding: 0%;
+            padding-top: 0.44rem;
+            padding-bottom: 0.34rem;
+            transition: all 0.2s;
+        }
+
+        a.nav-link:hover {
+            font-size: 1.1rem;
+        }
+    </style>
+
     {% for item in site.navbarElements %}
         <li class="nav-item">
         <a class="nav-link" href="{{ site.baseurl }}/{{ item.url }}">{{ item.name }}</a>
