Updated Disqus widget

--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -422,6 +422,9 @@ blockquote {
 
     #comments {
         margin-right: 15px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .jumbotron.fortags {
